<resources>
    <string name="app_name">QUO</string>
    <string name="menu_qrcode">QR Scanner</string>
    <string name="menu_home">Home</string>
    <string name="menu_places">My Places</string>

    <!-- Login -->
    <string name="email">e-mail</string>
    <string name="password">password</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="click_here">click here</string>
    <string name="error_email">Email is not valid</string>
    <string name="error_password">Length should be greater than 6</string>
    <string name="ok">OK</string>
    <string name="next">NEXT</string>
    <string name="send_reset_email_message">We sent you a email to reset your password</string>
    <string name="send_reset_email_title">Done!</string>
    <string name="login">Log In</string>
    <string name="agreement_info">I read and agree with the Terms and Conditions.</string>
    <string name="cancel">CANCEL</string>
    <string name="okay">OKAY</string>

    <!-- Facebook ID -->
    <string name="fb_app_id">1638330242854778</string>
    <string name="fb_login_protocol_scheme">fb1638330242854778</string>

    <string name="fb_open">Open</string>
    <string name="fb_close">Close</string>

    <!-- QR CODE SCANNER -->
    <string name="qr_code_found_third_party_title">Open url</string>
    <string name="qr_code_found_third_party_message">Do you like to enter</string>
    <string name="qr_code_not_found_third_party_title">We are sorry</string>
    <string name="qr_code_not_found_third_party_message">We can not resolve the QR code</string>
    <string name="qr_code_camera_permission_denied_title">Take picture permission denied</string>
    <string name="qr_code_camera_permission_denied_message">You need to take picture permission. The feature will be " +
                                "disabled. To enable it, go on settings and allow the camera " +
                                "permission for the application</string>
    <string name="error_qr_code_title">Error</string>
    <string name="error_qr_code_message">We are sorry ! There is not QR Code in image</string>
    <string name="done">DONE</string>
    <string name="qr_code_flash_on">flash on</string>
    <string name="qr_code_flash_off">flash off</string>
    <string name="qr_code_photos">photos</string>
    <string name="qr_code_cancel">cancel</string>
    <string name="qr_code_error_title">Error</string>
    <string name="qr_code_error_message">We are sorry! There is no QR-Code</string>
    <string name="qr_code_done">DONE</string>
    <string name="qr_code_not_found">Not found</string>
    <string name="qr_code_wrong_location_title">Too far away</string>
    <string name="qr_code_wrong_location_message">It seems you\'re not at the right location.</string>
    <string name="qr_code_wrong_location_ok">OK</string>
    <string name="qr_code_location_off_title">Where are you?</string>
    <string name="qr_code_location_off_message">Please turn on location services to access the place.</string>
    <string name="qr_code_location_off_turn_on">TURN ON</string>
    <string name="qr_code_location_off_no">NO</string>
    <string name="qr_core_location_error_title">Oh!</string>
    <string name="qr_code_location_error_message">Looks like something went wrong. Try again!</string>
    <string name="qr_code_location_error_ok">OK</string>

    <!-- CREATE EVENT -->
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="location">Location</string>
    <string name="event_name">Event name</string>
    <string name="description">Description</string>
    <string name="no_expiration_date">No Expiration Date</string>

    <!-- CREATE PAGE -->
    <string name="page_temp_line1_text">What do you want to</string>
    <string name="page_temp_line2_text"> tell or show your visitors?</string>

    <!-- PLACE -->
    <string name="place_info_menu">Information</string>
    <string name="place_info_description">Description</string>
    <string name="place_info_address">Address</string>
    <string name="place_info_time">Time</string>
    <string name="place_info_expiration">Day of Expiration</string>

    <string name="place_tablayout_title_page">PAGE</string>
    <string name="place_tablayout_title_gallery">GALLERY</string>

    <string name="save">Save</string>
    <string name="not_found">Not found</string>
    <string name="create_place_tablayout_title_event">EVENT</string>
    <string name="create_place_tablayout_title_page">PAGE</string>
    <string name="create_place_tablayout_title_settings">SETTINGS</string>
    <string name="add_content">Add Content</string>
    <string name="photos">Photos</string>
    <string name="allows_visitors_to_upload_photos">allows visitors to upload photos</string>
    <string name="validate_gps">Validate GPS</string>
    <string name="visitors_must_verify_their_location">visitors must verify their location</string>
    <string name="new_place">New Place</string>
    <string name="add_photo">Add Photo</string>
    <string name="camera">Camera</string>
    <string name="photo">Photo</string>
    <string name="select_picture">Select Picture</string>
    <string name="qr_code">QR Code</string>
    <string name="info">Info</string>


    <!-- PLACE GALLERY -->
    <string name="place_bottom_sheet_add_photo">Add Photo</string>
    <string name="place_bottom_sheet_camera">Camera</string>
    <string name="place_bottom_sheet_photos">Photos</string>

    <!-- HOME MENU -->
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_info">Info</string>
</resources>
