<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/dialog_layout_padding_start">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailWrapper"
        android:layout_width="@dimen/dialog_edit_text_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_layout_margin_top"
        android:inputType="textEmailAddress"
        android:theme="@style/EditTextTheme"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/editTextEmailSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordWrapper"
        android:layout_width="@dimen/dialog_edit_text_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_layout_margin_top"
        android:inputType="textPassword"
        android:theme="@style/EditTextTheme"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/editTextPasswordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:importantForAutofill="noExcludeDescendants"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/agreement_checkbox"
        style="@style/RadioButtonStyle"
        android:layout_width="@dimen/dialog_edit_text_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/agreement_checkbox_margin_bottom"
        android:layout_marginTop="@dimen/dialog_layout_margin_top"
        android:paddingLeft="@dimen/checkbox_padding_left"
        android:paddingTop="@dimen/checkbox_padding_top"
        android:text="@string/agreement_info"
        android:theme="@style/RadioButtonTheme" />

</LinearLayout>
