<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_history_menu_bottom"
    android:layout_width="match_parent"
    android:layout_height="@dimen/bottom_sheet_height"
    android:background="@color/white"
    android:orientation="vertical"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/bottom_sheet_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottom_sheet_margin_small"
            android:text="@string/select_picture"
            android:textSize="@dimen/large" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/defaultImageListView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottom_sheet_margin">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

    <View
        android:id="@+id/grayLineView"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/separator_line_height"
        android:layout_marginTop="@dimen/bottom_sheet_margin_small"
        android:background="@color/oslo_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/bottom_sheet_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottom_sheet_margin_small"
            android:layout_marginTop="@dimen/bottom_sheet_margin"
            android:text="@string/add_photo"
            android:textColor="@color/boulder"
            android:textSize="@dimen/large" />

        <RelativeLayout
            android:id="@+id/cameraLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottom_sheet_margin">

            <ImageView
                android:id="@+id/cameraImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_camera_black"
                android:tint="@color/boulder" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/bottom_sheet_margin_large"
                android:text="@string/camera"
                android:textColor="@color/boulder"
                android:textSize="@dimen/large" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/photosLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottom_sheet_margin">

            <ImageView
                android:id="@+id/photoImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_gallery_black"
                android:tint="@color/boulder" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/bottom_sheet_margin_large"
                android:text="@string/photo"
                android:textColor="@color/boulder"
                android:textSize="@dimen/large" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>